miniextendr-macros/tests/ui/typed_list_too_many_args.rs
use miniextendr_macros::typed_list;

const _SPEC: () = {
    let _ = typed_list!(alpha => numeric(1, 2));
};

fn main() {}
